typescript/checker/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts.stderr
error: An abstract accessor cannot have an implementation
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts:5:17
  |
5 |    abstract get aa() { return 1; } // error
  |                 ^^

error: An abstract accessor cannot have an implementation
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts:7:17
  |
7 |    abstract set bb(x: string) {} // error
  |                 ^^

